finish File controller & add options to CORS function
